code khung suon cho frontend

--- a/frontend/src/assets/app.layout.scss
+++ b/frontend/src/assets/app.layout.scss
@@ -32,6 +32,10 @@
                 color: inherit;
             }
         }
+
+        .mu-popover .mu-item-wrapper:not(.active) .mu-item {
+            color: black;
+        }
     }
 
     &-body {
